--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    height: 300vh;
+    height: 100svh;
     width: 100%;
     font-family: 'Casta';
     background-color: var(--white);
@@ -38,6 +38,56 @@ body {
     gap: 3rem;
     align-items: center;
     overflow: hidden;
+}
+
+.moving-text-wrapper-top {
+    position: absolute;
+    top: 2%;
+    right: 0;
+    opacity: 0;
+    font-weight: 600;
+    max-width: 65vw;
+    text-align: right;
+    padding-block: .3rem;
+    border-top: 1px solid var(--black);
+    border-bottom: 1px solid var(--black);
+    color: var(--black);
+    z-index: -2;
+    font-size: .6rem;
+    display: flex;
+    white-space: nowrap;
+    gap: 1rem;
+    overflow: hidden;
+    animation: moving-text 300ms 400ms ease-out forwards;
+    transform: translateX(100%);
+}
+
+@keyframes moving-text {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+
+    25% {
+        opacity: .25;
+    }
+
+    50% {
+        opacity: .50;
+    }
+
+    75% {
+        opacity: .75;
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.moving-text-top {
+    transform: translateX(-50%);
 }
 
 .lingkaran {
@@ -110,7 +160,8 @@ body {
     filter: blur(150px);
 }
 
-.upper-star-wrapper, .lower-star-wrapper {
+.upper-star-wrapper,
+.lower-star-wrapper {
     opacity: 0;
     animation: bintang 400ms ease-out 500ms forwards;
 }
@@ -125,9 +176,10 @@ body {
     }
 }
 
-.upper-star-wrapper img, .lower-star-wrapper img {
+.upper-star-wrapper img,
+.lower-star-wrapper img {
     aspect-ratio: 1/1;
-    height:30px;
+    height: 30px;
 }
 
 .pickup-wrapper {
@@ -196,16 +248,14 @@ body {
 }
 
 .pickup-wrapper button:hover,
-.pickup-wrapper button:hover
-{
+.pickup-wrapper button:hover {
     outline: 1px solid var(--black);
     outline-offset: 0px;
     color: var(--black);
 }
 
 .pickup-wrapper button:hover::after,
-.pickup-wrapper button:focus::after
-{
+.pickup-wrapper button:focus::after {
     scale: 1 1;
 }
 
