--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ body {
     width: 90%;
     background-color: var(--blue);
     filter: blur(120px);
-    transform: translate(-100%, -100%);
+    /* transform: translate(-100%, -100%); */
     animation: lingkaran-blur ;
 }
 
