--- a/css/style.css
+++ b/css/style.css
@@ -25,25 +25,41 @@ body {
 
 .intro-transition {
     display: none;
-    z-index: 3;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 0;
     width: 100%;
-    background-color: var(--blue);
     overflow: hidden;
 }
 
-.intro-inner-transition {
-    min-height: 100svh;
-    background-size: cover;
-    background-position: center;
+.intro-transition-front {
+    z-index: 4;
+    background-color: var(--blue);
+}
+
+.intro-transition-behind {
+    z-index: 3;
+    background-color: var(--black);
 }
 
 
-@keyframes hai {
+@keyframes hai-front{
+
+    0%,
+    100% {
+        height: 0;
+    }
+
+    25%,
+    50%,
+    75% {
+        height: 100%;
+    }
+}
+
+@keyframes hai-behind{
 
     0%,
     100% {
@@ -83,7 +99,7 @@ body {
 
     100% {
         opacity: 0;
-        transform: translate(-50%, -50%) scale(1.5);
+        transform: translate(-50%, -50%) scale(1.4);
     }
 
 
@@ -480,7 +496,6 @@ body {
 
 .container {
     z-index: 1;
-    min-height: 100vh;
 }
 
 .lingkaran-container-blur {
